--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-family: "Rubik", sans-serif;
   font-style: inherit;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 1.3;
   text-decoration: none;
   box-sizing: border-box;
@@ -13,6 +13,7 @@
   padding: 0;
   margin: 0;
   color: white;
+  background: none;
 }
 
 head, script {
@@ -32,6 +33,32 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.history-list {
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  list-style: none;
+}
+
+.switch-player {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+
+.score {
+  position: fixed;
+  top: 20px;
+}
+
+.x-score {
+  left: 20px;
+}
+
+.o-score {
+  right: 20px;
 }
 
 h1 {
@@ -78,13 +105,13 @@ svg {
   display: none;
 }
 
-@media (max-width: 690px) {
+@media (max-width: 960px) {
   * {
-    font-size: 12px;
+    font-size: 14px;
   }
 }
 @media (max-width: 440px) {
   * {
-    font-size: 8px;
+    font-size: 12px;
   }
 }/*# sourceMappingURL=style.css.map */
