--- a/src/style.scss
+++ b/src/style.scss
@@ -11,7 +11,7 @@ $transparent: rgba(1, 1, 1, 0);
     font-weight: 400;
     font-family: "Rubik", sans-serif;
     font-style: inherit;
-    font-size: 18px;
+    font-size: 24px;
     line-height: 1.3;
     text-decoration: none;
     box-sizing: border-box;
@@ -20,6 +20,7 @@ $transparent: rgba(1, 1, 1, 0);
     padding: 0;
     margin: 0;
     color: white;
+    background: none;
 }
 
 head, script {
@@ -37,6 +38,32 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+.history-list {
+    position: fixed;
+    left: 20px;
+    bottom: 20px;
+    list-style: none;
+}
+
+.switch-player {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+}
+
+.score {
+    position: fixed;
+    top: 20px;
+}
+
+.x-score {
+    left: 20px;
+}
+
+.o-score {
+    right: 20px;
 }
 
 h1 {
@@ -83,14 +110,14 @@ svg {
     display: none;
 }
 
-@media (max-width: 690px) {
+@media (max-width: 960px) {
     * {
-        font-size: 12px;
+        font-size: 14px;
     }
 }
 
 @media (max-width: 440px) {
     * {
-        font-size: 8px;
+        font-size: 12px;
     }
 }
